# YukiCtrl

./: .gitignore  README.en.md  README.md  build.bat  build.sh  rules.yaml
.github/: build .yml
.github/workflows/: build.yml
YukiDaemon/: boot_scripts.yaml  customize.sh  module.prop  rules.yaml  service.sh
YukiDaemon/config/: config.yaml
YukiDaemon/config/i18n/: en.ftl  zh.ftl
YukiDaemon/scripts/: adj_qcom_gpu.sh
configs/: gs201.yaml  mt6833.yaml  mt6891.yaml  mt6895.yaml  mt6983.yaml  mt6983z.yaml  mt6985.yaml  mt6985z.yaml  mt6989.yaml  mt6991.yaml  sm7475.yaml  sm8150.yaml  sm8250-ac.yaml  sm8350.yaml  sm8450.yaml  sm8475.yaml  sm8550.yaml  sm8650.yaml  sm8750.yaml  sm8850.yaml  version.yaml
yuki-daemon/: Cargo.toml
yuki-daemon/.cargo/: config.toml
yuki-daemon/src/: common.rs  logger.rs  main.rs  utils.rs
yuki-daemon/src/monitor/: app_detect.rs  config.rs  db.rs  mod.rs  power.rs
yuki-daemon/src/scheduler/: config.rs  mod.rs  scheduler.rs
yumi/: Cargo.toml  build.rs
yumi-webui/src/i18n/: index.ts
yumi-webui/src/utils/: bridge.ts  mock.ts
yumi-webui/src/views/: AppRulesView.vue  ConfigEditorView.vue  HomeView.vue  LogViewerView.vue
yumi/.cargo/: config.toml
yumi/src/: common.rs  main.rs
yumi/src/bpf/: bpf_abi.h  cpu_probe.c  fps_probe.c
yumi/src/fas/: fas.rs  mod.rs
yumi/src/monitor/: app_detect.rs  boot.rs  config.rs  cpu_monitor.rs  fps_monitor.rs  mod.rs
yumi/src/scheduler/: config.rs  cpu_load_governor.rs  fas.rs  mod.rs  scheduler.rs
yumi_module/: customize.sh  module.prop  rules.yaml  service.sh
yumi_module/config/: config.yaml
yumi_module/config/i18n/: en.ftl  zh.ftl
yumi_module/configs/: gs201.yaml  mt6833.yaml  mt6891.yaml  mt6895.yaml  mt6983.yaml  mt6983z.yaml  mt6985.yaml  mt6985z.yaml  mt6989.yaml  mt6991.yaml  sm7475.yaml  sm8150.yaml  sm8250-ac.yaml  sm8350.yaml  sm8450.yaml  sm8475.yaml  sm8550.yaml  sm8650.yaml  sm8750.yaml  sm8850.yaml
yumi_module/scripts/: adj_qcom_bus.sh  adj_walt.sh
yumi_module/webroot/: index.html
yumi_module/webroot/assets/: index-BU2QzB_n.js  index-CWxTH5Ra.css  index-CaLG7Wxk.js  index-DaFXFTMa.js  index-Derj7NJE.js  (+3 more)
