[package]
name = "yuki-daemon"
version = "2.0.0"
edition = "2021"
authors = ["yuki <loyeturz@163.com>"]
license = "GPL-3.0-or-later"
description = "A powerful Android system daemon for monitoring and scheduling."
repository = "https://github.com/imacte/YukiCtrl"
keywords = ["android", "daemon", "scheduler", "monitor"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
# --- 通用/核心 ---
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
log = "0.4"
once_cell = "1.21.3"
lazy_static = "1.4.0"

# --- Monitor 带来的依赖 ---
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
inotify = "0.10.2"
regex = "1.5"
kobject-uevent = "0.2"
netlink-sys = "0.8"

# --- Scheduler 带来的依赖 ---
log4rs = "1.3" # 统一使用这个做日志后端
nix = { version = "0.30.1", features = ["fs", "signal", "inotify"] }
glob = "0.3.3"
fluent = "0.17.0"
fluent-bundle = "0.16.0"
intl-memoizer = "0.5.3"